well on our way to parsing mad json

--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,10 +1,11 @@
 
-<% form_for @survey do |f| %>
+
 
 <% @survey_questions.each do |k,v| %>
 <%= k %>
 <%= v %>
 <%end%>
+<% form_for @survey, url: new_page_path do |f| %>
 
 <%= f.submit "submit" %>
 
