--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,24 @@
 
 
 
-<% @survey_questions.each do |k,v| %>
-<%= k %>
-<%= v %>
+<% @survey_questions.each do |k,surveytitle| %>
+  <% if surveytitle.kind_of?(String) %>
+    <%= surveytitle %>
+  <%else%>
+    <% surveytitle.each do |stuff| %>
+      <% stuff.each do |k,v| %>
+        <% if v.kind_of?(String) %>
+          <%= v %>
+        <%else%>
+          <% if v.kind_of?(Array) %>
+          <% v.each do |os, option| %>
+            <%= option %>
+          <%end%>
+          <%end%>
+        <%end%>
+      <%end%>
+    <%end%>
+  <%end%>
 <%end%>
 <% form_for @survey, url: new_page_path do |f| %>
 
