--- a/app/views/morning_surveys/new.html.erb
+++ b/app/views/morning_surveys/new.html.erb
@@ -1,12 +1,12 @@
 
 <h2><%= @survey_questions["survey_title"] %></h2>
 
-<% form_for @page do |f| %>
+<% form_for MorningSurvey.new do |f| %>
 <ul>
 <% @question_array.each_with_index do |question, index| %>
 <li>
 <%= f.label question %>
-    <% f.hidden_field :question, :value => question %>
+    <%= f.text_field :question, :value => question %>
   <% @option_array[index][0].each do |k,v| %>
 
     <span><%= f.label v %>
@@ -18,6 +18,15 @@
 <%end%>
 <%end%>
 </ul>
+
+<% @question_array.each_with_index do |question, index| %>
+    <%=  question %>
+  <% @option_array[index][0].each do |k,v| %>
+
+    <%= v %>
+
+<%end%>
+<%end%>
 
 <%# form_for @question_group, url: new_page_path do |f| %>
 
