--- a/app/views/morning_surveys/new.html.erb
+++ b/app/views/morning_surveys/new.html.erb
@@ -10,11 +10,15 @@
 <li>
 <%= f.label "question", question %>
     <% answered_questions_array << question %>
-  <% @option_array[index][0].each do |k,v| %>
 
-    <span><%= f.label "v", v %>
-      <%= shma = f.check_box :answer, :value => v %>
+  <% @option_array[index][0].each do |k,v| %>
+    <%= f.label "v", v %>
+      <%= shma = check_box_tag :answer, :value => v %>
+    <span><%= shma = v %>
     <% answered_answers_array << shma %></span>
+
+
+
 
 <%end%>
 </li>
