--- a/app/views/morning_surveys/new.html.erb
+++ b/app/views/morning_surveys/new.html.erb
@@ -3,7 +3,7 @@
 
 <ul>
 
-<%= form_for MorningSurvey.new do |f| %>
+<%= form_for @page do |f| %>
 <% answered_questions_array = [] %>
 <% answered_answers_array = [] %>
 <% @question_array.each_with_index do |question, index| %>
@@ -11,18 +11,14 @@
 <%= f.label "question", question %>
     <% answered_questions_array << question %>
 
-  <% @option_array[index][0].each do |k,v| %>
-    <%= f.label "v", v %>
-      <%= shma = check_box_tag :answer, :value => v %>
-    <span><%= shma = v %>
-    <% answered_answers_array << shma %></span>
-
-
-
-
+<% @option_array[index][0].each do |optionNumber, option| %>
+  <%= option %>
+    <% answered_answers_array << option %>
 <%end%>
+<%end%>
+
+
 </li>
-<%end%>
     <%= f.hidden_field :question, :value => answered_questions_array %>
     <%= f.hidden_field :answer, :value => answered_answers_array %>
     <%= f.submit "submit" %>
