--- a/app/views/morning_surveys/new.html.erb
+++ b/app/views/morning_surveys/new.html.erb
@@ -3,26 +3,26 @@
 
 <ul>
 
-<%= form_for @page do |f| %>
-<% answered_questions_array = [] %>
-<% answered_answers_array = [] %>
-<% @question_array.each_with_index do |question, index| %>
-<li>
-<%= f.label "question", question %>
+  <%= form_for @page do |f| %>
+  <% answered_questions_array = [] %>
+  <% answered_answers_array = [] %>
+  <% @question_array.each_with_index do |question, index| %>
+  <li>
+    <%= f.label "question", question %>
     <% answered_questions_array << question %>
 
-<% @option_array[index][0].each do |optionNumber, option| %>
-  <%= option %>
+    <% @option_array[index][0].each do |optionNumber, option| %>
+    <%= radio_button_tag index, option %>
+    <%= label_tag option, option %>
     <% answered_answers_array << option %>
-<%end%>
-<%end%>
+    <%end%>
+    <%end%>
 
-
-</li>
-    <%= f.hidden_field :question, :value => answered_questions_array %>
-    <%= f.hidden_field :answer, :value => answered_answers_array %>
-    <%= f.submit "submit" %>
-<%end%>
+  </li>
+  <%= f.hidden_field :question, :value => answered_questions_array %>
+  <%= f.hidden_field :answer, :value => answered_answers_array %>
+  <%= f.submit "submit" %>
+  <%end%>
 </ul>
 
 <%# form_for @question_group, url: new_page_path do |f| %>
