pretty hacky, but now only the checked radio button answers are in the morning survey object!!!

--- a/app/views/morning_surveys/new.html.erb
+++ b/app/views/morning_surveys/new.html.erb
@@ -4,6 +4,7 @@
 <ul>
 
   <%= form_for @page do |f| %>
+  <% bam = [] %>
   <% answered_questions_array = [] %>
   <% answered_answers_array = [] %>
   <% @question_array.each_with_index do |question, index| %>
@@ -12,15 +13,16 @@
     <% answered_questions_array << question %>
 
     <% @option_array[index][0].each do |optionNumber, option| %>
-    <%= f.radio_button_tag :answer, option, option %>
-    <%= f.label option, option %>
-    <% answered_answers_array << :answer %>
+    <%= poop = radio_button_tag index, option %>
+    <%= label_tag option, option %>
+    <% bam << poop %>
+    <% answered_answers_array << params["#{index}"] %>
     <%end%>
     <%end%>
 
   </li>
   <%= f.hidden_field :question, :value => answered_questions_array %>
-  <%= f.hidden_field :answer, :value => answered_answers_array %>
+  <%= f.hidden_field :answer, :value => @fart %>
   <%= f.submit "submit" %>
   <%end%>
 </ul>
