deleted old paths.  added navigation between pages.

--- a/app/views/morning_surveys/show.html.erb
+++ b/app/views/morning_surveys/show.html.erb
@@ -1,2 +1,9 @@
-<%= @morning_survey.question %>
-<%= @morning_survey.answer %>
+<% @results.each do |q,a| %>
+  <ul>
+    <li><%= q %>
+        <%= a %>
+    </li>
+  </ul>
+<% end %>
+
+<%= link_to "another survey", root_path %>
