--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">My Site</a></h1>
+      <h1><a href="#">JSON-SURVEY-O-MATIC</a></h1>
     </li>
     <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
   </ul>
@@ -9,18 +9,18 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
+      <li class="active"><a href="#">right button active</a></li>
       <li class="has-dropdown">
-        <a href="#">Right Button with Dropdown</a>
+        <a href="#">right button with dropdown</a>
         <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
+          <li><a href="#">first link in dropdown</a></li>
         </ul>
       </li>
     </ul>
 
     <!-- Left Nav Section -->
     <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
+      <li><a href="#">left nav button</a></li>
     </ul>
   </section>
 </nav>
